--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<main class="home-page w-full h-screen flex items-center justify-center relative">
+  <div class="bg"></div>
+  <div class="title-container flex flex-col items-center gap-y-4 mb-32">
+    <h1 class="text-7xl font-bold tracking-wide">{{ title }}</h1>
+    <h2 class="text-3xl font-light">{{ subtitle }}</h2>
+  </div>
+</main>
