--- a/src/app/components/button-nav/button-nav.component.html
+++ b/src/app/components/button-nav/button-nav.component.html
@@ -1,13 +1,12 @@
 <a
-  href="#"
+  [href]="buttonData.href"
   class="item flex flex-col gap-y-2 items-center justify-center"
-  (click)="onClick()"
   [ngClass]="{ active: isActive }"
   (mouseenter)="onMouseEnter()"
   (mouseleave)="onMouseLeave()"
 >
   <div class="img-container w-6">
-    <img #img [src]="buttonData.href" alt="" class="w-100" />
+    <img #img [src]="buttonData.normal" alt="" class="w-100" />
   </div>
-  <h3 class="text-xs">{{ buttonData.description }}</h3>
+  <h3 class="text-xs on-surface-text">{{ buttonData.description }}</h3>
 </a>
