--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <main class="home-page w-full h-screen flex items-center justify-center relative">
   <div class="bg"></div>
-  <div class="title-container flex flex-col items-center gap-y-4 mb-32">
-    <h1 class="text-7xl font-bold tracking-wide">{{ title }}</h1>
-    <h2 class="text-3xl font-light">{{ subtitle }}</h2>
+  <div class="title-container flex flex-col items-center gap-y-4">
+    <h1 class="text-7xl font-bold tracking-wide on-secondary-container-text">{{ title }}</h1>
+    <h2 class="text-3xl font-light on-surface-text">{{ subtitle }}</h2>
   </div>
 </main>
