--- a/src/styles/material/tokens.scss
+++ b/src/styles/material/tokens.scss
@@ -157,6 +157,7 @@
   --md-sys-color-surface-variant-dark: #524345;
   --md-sys-color-on-surface-variant-dark: #d6c2c4;
   --md-sys-color-outline-dark: #9f8c8f;
+  --md-sys-color-outline-rgb: 159, 140, 143;
   --md-sys-color-inverse-on-surface-dark: #201a1b;
   --md-sys-color-inverse-surface-dark: #ece0e0;
   --md-sys-color-inverse-primary-dark: #9a4057;
