--- a/src/app/components/button-nav/button-nav.component.scss
+++ b/src/app/components/button-nav/button-nav.component.scss
@@ -7,7 +7,7 @@
   h3 {
     font-weight: 600;
   }
-  .img-container::before {
+  &::before {
     content: "";
     position: absolute;
     border-radius: 100px;
@@ -17,9 +17,11 @@
     top: 30%;
     transform: translate(-50%, -60%);
     background-color: var(--md-sys-color-secondary-container);
-    transition: all 0.2s ease-in-out;
+    transition: all 0.3s ease-in-out;
     opacity: 0.3;
-    z-index: -1;
+  }
+  .img-container {
+    z-index: 2;
   }
 }
 
@@ -28,8 +30,9 @@
     font-weight: 700;
     letter-spacing: 0.3px;
     color: var(--md-sys-color-on-secondary-container);
+    transition: all 0.3s ease-in-out;
   }
-  .img-container::before {
+  &::before {
     content: "";
     position: absolute;
     border-radius: 100px;
@@ -39,7 +42,46 @@
     top: 30%;
     transform: translate(-50%, -60%);
     background-color: var(--md-sys-color-secondary-container);
-    transition: all 0.2s ease-in-out;
-    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .img-container {
+    z-index: 2;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  a {
+    flex-direction: row;
+    justify-content: start;
+    column-gap: 20px;
+
+    .img-container {
+      width: 2rem;
+    }
+
+    h3 {
+      font-size: 1rem;
+    }
+  }
+
+  .active {
+    &::before {
+      height: 45px;
+      width: 50px;
+      left: 0%;
+      top: 60%;
+      transform: translate(-18%, -58%);
+    }
+  }
+
+  .item:not(.active):hover {
+    &::before {
+      height: 45px;
+      width: 50px;
+      left: 0%;
+      top: 60%;
+      transform: translate(-18%, -57%);
+    }
   }
 }
