--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,1 +1,22 @@
-<p>about-page works!</p>
+<main class="about-page w-full h-screen flex items-center relative">
+  <div class="about-content h-max w-full flex justify-between items-center gap-x-32">
+    <div class="info-container flex flex-col w-1/2 gap-y-8">
+      <h1 class="title font-bold text-5xl on-secondary-container-text">
+        ABOUT ME
+      </h1>
+      <p class="text font-medium text-lg on-surface-text">
+        Advanced Computer Science student and full-stack Angular developer with
+        over 3 years of experience. Currently focused on developing
+        cross-platform applications and Machine Learning.
+      </p>
+      <app-md-button [text]="'Download CV'"></app-md-button>
+    </div>
+
+    <div class="img-container relative">
+      <div class="image">
+        <img src="../../../assets/bg/me.png" alt="" />
+      </div>
+      <div class="bg"></div>
+    </div>
+  </div>
+</main>
