Add Download CV

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -6,7 +6,7 @@
     class="body-content h-36 w-full overflow-hidden flex flex-col justify-end gap-y-2 px-2 relative"
   >
     <div class="text flex flex-col gap-y-2 absolute top-2">
-      <h1 class="title text-base- font-semibold on-secondary-container-text">
+      <h1 class="title text-base font-semibold on-secondary-container-text">
         {{ cardData.title }}
       </h1>
       <p class="description text-xs font-normal tracking-wide on-surface-text">
