--- a/src/app/components/md-button/md-button.component.html
+++ b/src/app/components/md-button/md-button.component.html
@@ -1,3 +1,6 @@
-<button class="rounded-xl primary-container on-surface-text p-3">
+<a class="rounded-xl primary-container on-surface-text p-3"
+  [href]="href"
+  [download]="download"
+>
   {{ text }}
-</button>
+</a>
