--- a/src/app/components/md-button/md-button.component.scss
+++ b/src/app/components/md-button/md-button.component.scss
@@ -1,13 +1,14 @@
-button {
+a {
     transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 }
 
-button:hover {
+a:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.26), 0 8px 12px 0 rgba(0, 0, 0, 0.16);
     transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-button:active {
+a:active {
     animation: click 0.2s ease-out;
 }
 
